# sk-agent-cookbook

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
patterns/01_memory_persistence/: README.md  memory_persistence.py  test_memory_persistence.py
patterns/02_multi_agent_handoff/: README.md  multi_agent_handoff.py  test_multi_agent_handoff.py
patterns/03_tool_retry_with_fallback/: README.md  test_tool_retry_with_fallback.py  tool_retry_with_fallback.py
patterns/04_cost_aware_routing/: .env.example  README.md  cost_aware_routing.py  test_cost_aware_routing.py
patterns/05_structured_output_agent/: README.md  structured_output_agent.py  test_structured_output_agent.py
patterns/06_rag_with_azure_ai_search/: .env.example  README.md  rag_with_azure_ai_search.py  test_rag_with_azure_ai_search.py
patterns/07_human_in_the_loop/: .env.example  README.md  human_in_the_loop.py  test_human_in_the_loop.py
scripts/: architecture.py  benchmark.py  inject_readme_section.py
sk_cookbook/: __init__.py  service.py  testing.py
tests/: test_service.py
